Only *YOU* can prevent buffer overflows.
Author: dustin
Date: 1998/11/04 09:04:43

imported from: dustin@spy.net--projects/snippets--c--1.0--patch-176

--- a/c/c/regex/Makefile
+++ b/c/c/regex/Makefile
@@ -1,3 +1,9 @@
-CFLAGS=-I. -O2 -g -DMYMALLOC
-mmap: mmmain.o mymalloc.o hash.o
-	$(CC) -o mwoo mmmain.o mymalloc.o hash.o -L. -lpcre
+CFLAGS=-I. -O2 -DMYMALLOC
+
+all: mwoo makeindex
+
+mwoo: mmmain.o mymalloc.o hash.o
+	$(CC) -o $@ mmmain.o mymalloc.o hash.o -L. -lpcre
+
+makeindex: makeindex.o
+	$(CC) -o $@ makeindex.o
